# image-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
monitoring/: loki.yml  prometheus.yml  promtail.yml
monitoring/grafana/dashboards/: logs-dashboard.json  metrics-dashboard.json  response-tp.json
monitoring/grafana/datasources/: prometheus.yml
notebooks/: sandbox.ipynb
scripts/: clear_database.py  ingest_csv.py  init.sql
src/image_api/: __init__.py  service.py
src/image_api/clients/: __init__.py  database.py
src/image_api/config/: __init__.py  logging_config.py  settings.py
src/image_api/models/: __init__.py  database.py  schemas.py
src/image_api/routers/: __init__.py  frames.py  health.py
src/image_api/utilities/: __init__.py  compression.py  database_ops.py  image_processing.py
tests/: __init__.py  conftest.py  test_compression.py  test_health.py  test_image_processing.py  test_logging_config.py  test_schemas.py
